# dag-executor

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package.json  plan-globals.d.ts  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md  tsconfig.json
.claude/commands/: plan-and-impl-step.md
.claude/skills/codex-review-loop/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  visualizer-screenshots.yml
artifacts/: capabilities.digest  capabilities.json  endpoints.dev.json  endpoints.digest  endpoints.prod.json  endpoints.test.json  features.digest  features.json  keys.digest  keys.json  params.digest  params.json  tasks.json
artifacts/plans/: bad_engine_caps_unsorted.plan.json  bad_engine_ext_not_required.plan.json  bad_engine_node_ext_not_declared.plan.json  bad_engine_nonempty_payload.plan.json  bad_engine_unknown_cap.plan.json  bad_in_list.plan.json  bad_pred_table_shape.plan.json  bad_regex_flags.plan.json  bad_trace_type.plan.json  bad_type_fanout.plan.json  concat_bad_arity.plan.json  concat_demo.plan.json  concat_plan.plan.json  cycle.plan.json  demo.plan.json  extra_param.plan.json  index.json  large_fanout.plan.json  missing_fanout.plan.json  missing_input.plan.json  missing_pred_id.plan.json  null_trace.plan.json  parallel_sleep_plan.plan.json  reels_plan_a.plan.json  regex_demo.plan.json  regex_param_demo.plan.json  regex_plan.plan.json  string_in_list.plan.json  unknown_pred_id.plan.json
artifacts/plans-examples/: concat_plan.plan.json  index.json  redis_follow_media.plan.json  reels_plan_a.plan.json  regex_plan.plan.json  sort_demo.plan.json
benchmarks/async_comparative/: bench_asio.cpp  bench_folly.cpp  bench_libuv.c  gen_positioning.py
docker/: redis.compose.yml
docs/: ADDING_CAPABILITIES.md  ASYNC_COMPARATIVE_STUDY.md  CAPABILITY_EXAMPLES.md  EVENT_LOOP_BENCH.md  EVENT_LOOP_SHUTDOWN.md  IMPLEMENTATION_PROGRESS.md  PERF_VM.md  PLAN_AUTHORING_GUIDE.md  PLAN_COMPILER_GUIDE.md  REDIS_MONITORING.md  REQUEST_LIFECYCLE.md  TASK_EXECUTION_FLOW.md  TASK_IMPLEMENTATION_GUIDE.md  TESTING_GUIDE.md  THREADING_MODEL.md  async_dag_scheduler_architecture.md  event_loop_architecture.md  review-step-12.2-writes-effect.md  review-step-12.4a-schema-delta.md  review-step-13.1-ast-expr-extraction.md  step-14.5c.2-claude-instructions.md
docs/plans/: visualizer-step-01-live-editor.md
dsl/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
dsl/src/: codegen.ts
dsl/src/codegen/: gen-cpp.ts  gen-monaco.ts  gen-ts.ts  index.ts  parsers.ts  types.ts  utils.ts
dsl/tools/: build_all_plans.ts  redis_seed.ts  sync_manifest.ts  test_ast_extraction.ts  test_writes_effect.ts  test_writes_effect_parity.ts
engine/: CMakeLists.txt
engine/include/: async_dag_scheduler.h  async_inflight_limiter.h  async_io_clients.h  async_redis_client.h  bench_event_loop.h  bench_stats.h  capability_registry.h  capability_registry_gen.h  column_batch.h  coro_task.h  cpu_offload.h  cpu_pool.h  dag_scheduler.h  deadline.h  endpoint_registry.h  event_loop.h  executor.h  expr_eval.h  feature_registry.h  features.h  inflight_limiter.h  io_clients.h  key_registry.h  keys.h  output_contract.h  param_registry.h  param_table.h  params.h  plan.h  pred_eval.h  redis_client.h  request.h  rowset.h  schema_delta.h  sha256.h  task_registry.h  thread_pool.h  uv_sleep.h  validation.h  writes_effect.h
engine/src/: async_dag_scheduler.cpp  async_io_clients.cpp  async_redis_client.cpp  bench_event_loop.cpp  capability_registry.cpp  cpu_pool.cpp  dag_scheduler.cpp  event_loop.cpp  executor.cpp  inflight_limiter.cpp  io_clients.cpp  main.cpp  output_contract.cpp  plan.cpp  redis_client.cpp  task_registry.cpp  thread_pool.cpp  writes_effect.cpp
engine/src/tasks/: busy_cpu.cpp  concat.cpp  filter.cpp  fixed_source.cpp  follow.cpp  media.cpp  recommendation.cpp  sleep.cpp  sort.cpp  take.cpp  viewer.cpp  viewer_fetch_cached_recommendation.cpp  viewer_follow.cpp  vm.cpp
engine/src/tasks/core/: concat.cpp  filter.cpp  follow.cpp  media.cpp  recommendation.cpp  sort.cpp  take.cpp  viewer.cpp  vm.cpp
engine/src/tasks/test/: busy_cpu.cpp  fixed_source.cpp  sleep.cpp
engine/tests/: test_async_redis.cpp  test_concat.cpp  test_dag_scheduler.cpp  test_endpoint_registry.cpp  test_event_loop.cpp  test_inflight_limiter.cpp  test_param_table.cpp  test_plan_info_writes_eval.cpp  test_pred_eval.cpp  test_regex.cpp  test_request.cpp  test_rowset.cpp  test_runtime_schema_delta.cpp  test_sort.cpp  test_writes_effect.cpp
engine/tests/fixtures/plan_info/: fixed_source.plan.json  vm_and_row_ops.plan.json
examples/plans/: concat_plan.plan.ts  evil.plan.ts  evil_proto.plan.ts  manifest.json  redis_follow_media.plan.ts  reels_plan_a.plan.ts  regex_plan.plan.ts  sort_demo.plan.ts
plans/: concat_plan.plan.ts  manifest.json  parallel_sleep_plan.plan.ts  reels_plan_a.plan.ts  regex_plan.plan.ts
registry/: capabilities.toml  endpoints.dev.toml  endpoints.prod.toml  endpoints.test.toml  features.toml  keys.toml  params.toml  tasks.toml  validation.toml
rfcs/: 0000-template.md  0001-extensions-capabilities.md  0002-timeout-wrapper.md  0003-debuggability-breakpoints-capture-after-request.md  0004-runtime-branching-if-request.md  0005-key-effects-writes-exact.md  0006-plan-visualizer.md  0007-namespaced-task-ops.md  0008-team-folder-structure.md  README.md
scripts/: ci.sh  ci_redis_local.sh  monitor_ec2.sh  perf_throughput_sweep.sh  plot_perf_sweep.py  redis_down.sh  redis_up.sh  seed_redis.sh  soak_async_timeout.sh
scripts/ci-helpers/: validate_ast_expr.py  validate_mixed_expr.py  validate_schema_deltas.py  validate_writes_eval.py
test/fixtures/plans/: bad_alias.plan.ts  bad_caps_unsorted.plan.ts  bad_count_type.plan.ts  bad_expr_type.plan.ts  bad_ext_key_not_required.plan.ts  bad_fanout_type.plan.ts  bad_import.plan.ts  bad_node_ext_not_declared.plan.ts  bad_outkey_type.plan.ts  bad_pred_type.plan.ts  bad_trace_type.plan.ts  evil.plan.ts  (+10 more)
tools/visualizer/: .gitignore  CLAUDE.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+28 files in other folders)
